# ggb

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main.c
include/: board.h  command.h  commandline.h  console.h  core.h  gbb_gl.h  geometry.h  graph.h  math_.h  message.h  object.h  point.h  points_manage.h  queue.h  raylib_.h  str_hash.h  tool.h  toolbar.h  types.h
src/: board.c  commandline.c  console.c  file_manage.c  gbb_gl.c  main.c  object.c  point.c  raylib_.c  str_hash.c
src/command/: bisector.c  circle.c  circum.c  create.c  delete.c  isect.c  line.c  load_src.c  midpoint.c  move_pt.c  parallel.c  perp.c  point.c
src/core/: argparse.c  commandline.c  graph.c  message.c  object.c  point.c  str_hash.c
src/tools/: bisector.c  circle.c  circum.c  common.c  delete.c  isect.c  line.c  midpoint.c  parallel.c  perp.c  point.c  tangent.c
src/ui/: board.c  raylib_.c  toolbar.c
